Worked on Payregister Report UI

--- a/payroll-management-system/Application.xaml
+++ b/payroll-management-system/Application.xaml
@@ -13,6 +13,7 @@
                 <ResourceDictionary Source="Theme/RegularTextbox.xaml"/>
                 <ResourceDictionary Source="Theme/SubHeader.xaml"/>
                 <ResourceDictionary Source="Theme/SubMenuButtonStyle.xaml"/>
+                <ResourceDictionary Source="Theme/RegularTextBlock.xaml"/>
 
                 <ResourceDictionary Source="pack://application:,,,/AdonisUI;component/ColorSchemes/Light.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/AdonisUI.ClassicTheme;component/Resources.xaml"/>
