--- a/payroll-management-system/Theme/RegularTextblock.xaml
+++ b/payroll-management-system/Theme/RegularTextblock.xaml
@@ -1,10 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                                        xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="RegularTextBlock" TargetType="TextBlock">
         <Style.Setters>
             <Setter Property="FontWeight" Value="Bold"/>
-            <Setter Property="Margin" Value="0,3,0,0"/>
-            <Setter Property="Width" Value="120"/>
+            <Setter Property="Margin" Value="3"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <!--<Setter Property="Width" Value="120"/>-->
         </Style.Setters>
     </Style>
 </ResourceDictionary>
