--- a/payroll-management-system/Theme/RegularTextbox.xaml
+++ b/payroll-management-system/Theme/RegularTextbox.xaml
@@ -4,9 +4,10 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="RegularTextBox" TargetType="TextBox">
         <Style.Setters>
-            <Setter Property="Margin" Value="3,8,3,3"/>
-            <Setter Property="Width" Value="180"/>
-            <Setter Property="Height" Value="22"/>
+            <Setter Property="Background" Value="{DynamicResource {x:Static adonisUi:Brushes.Layer2BackgroundBrush}}"/>
+            <Setter Property="Margin" Value="3"/>
+            <Setter Property="MinWidth" Value="45"/>
+            <!--<Setter Property="MinHeight" Value="22"/>-->
         </Style.Setters>
     </Style>
 </ResourceDictionary>
