--- a/payroll-management-system/Theme/SubHeader.xaml
+++ b/payroll-management-system/Theme/SubHeader.xaml
@@ -1,4 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                                        xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style TargetType="{x:Type TextBlock}" x:Key="SubHeader">
         <Style.Setters>
