--- a/payroll-management-system/Theme/TextboxTheme.xaml
+++ b/payroll-management-system/Theme/TextboxTheme.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                                        xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
     xmlns:local="clr-namespace:app">
 
     <Style TargetType="{x:Type TextBox}" x:Key="ModernTextbox">
