--- a/payroll-management-system/Page/Payroll/PayRegister.xaml
+++ b/payroll-management-system/Page/Payroll/PayRegister.xaml
@@ -10,37 +10,64 @@
         mc:Ignorable="d"
         d:DesignHeight="450" d:DesignWidth="800"
         Title="ProcessPayreg">
-    <Grid Margin="10">
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="45"/>
             <RowDefinition/>
-            <RowDefinition Height="35"/>
+            <RowDefinition Height="45"/>
             <RowDefinition Height="25"/>
         </Grid.RowDefinitions>
 
-        
-        
-        
-        <Grid Grid.Column="0" Grid.Row="1" >
-            <Grid.RowDefinitions>
-                <RowDefinition Height="25"/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-            <ListView x:Name="lstPayreg" DragEnter="lstPayreg_DragEnter" Drop="lstPayreg_Drop" AllowDrop="True" Grid.Row="1" Margin="10" KeyDown="lstPayreg_KeyDown" SelectionMode="Multiple" >
-                <ListView.View>
-                    <GridView>
-                        <GridViewColumn Header="Payreg" Width="300"/>
-                    </GridView>
-                </ListView.View>
-            </ListView>
-            <TextBlock Text="Drag any Pay Register here:" VerticalAlignment="Bottom" Margin="3"/>
-        </Grid>
+        <StackPanel Grid.Row="0" Orientation="Horizontal" Background="{DynamicResource {x:Static adonisUi:Brushes.Layer2BackgroundBrush}}">
+            <StackPanel Orientation="Horizontal">
+                <TextBlock  VerticalAlignment="Center" Margin="6">Payroll Date:</TextBlock>
+                <DatePicker Name="dtPayrollDate" SelectedDateChanged="dtPayrollDate_SelectionChanged" Width="125" VerticalAlignment="Center"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                <TextBlock  VerticalAlignment="Center" Margin="6">Payroll Code:</TextBlock>
+                <ComboBox x:Name="cbPayrollCode" SelectionChanged="dtPayrollDate_SelectionChanged" HorizontalAlignment="Left" Margin="8" VerticalAlignment="Center" IsEditable="True" Width="100"/>
+            </StackPanel>
+            <ContentControl x:Name="ctrlLoader" ContentTemplate="{DynamicResource {x:Static adonisUi:Templates.LoadingBars}}"
+                Foreground="{DynamicResource {x:Static adonisUi:Brushes.ForegroundBrush}}"
+                Width="24"
+                Height="24"
+                Visibility="Collapsed" 
+                Focusable="False"/>
+            <Button x:Name="btnExport" Click="btnExport_Click" VerticalAlignment="Center" HorizontalAlignment="Right" Style="{StaticResource SecondaryButton}">Export Pay Register</Button>
+        </StackPanel>
+
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+            <Button x:Name="btnUploadPayreg" Click="btnUploadPayreg_Click" VerticalAlignment="Center" HorizontalAlignment="Right" Style="{StaticResource PrimaryButton}">Upload Pay Register</Button>
+        </StackPanel>
+
+        <DataGrid x:Name="lstPayrolls" Grid.Column="1" Grid.Row="1" AutoGenerateColumns="False" SelectionMode="Single">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="EE Id" Binding="{Binding EE_Id}" Width="55" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Fullname" Binding="{Binding EE.Fullname}" Width="175" IsReadOnly="True"/>
+                <!--<DataGridTextColumn Header="Payroll Date" Binding="{Binding Payroll_Date, StringFormat={}{0:yyyy-MM-dd}}" Width="85" IsReadOnly="True"/>-->
+                <DataGridTextColumn Header="Gross Pay" Binding="{Binding Gross_Pay, StringFormat={}{0:N2}}" Width="75" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Total Gov't Deduction" Binding="{Binding Government.TotalDeduction, StringFormat={}{0:N2}}" Width="100" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Adjust 1" Binding="{Binding Adjust1, StringFormat={}{0:N2}}" Width="55" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Adjust 2" Binding="{Binding Adjust2, StringFormat={}{0:N2}}" Width="55" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Net Pay" Binding="{Binding Net_Pay, StringFormat={}{0:N2}}" Width="75" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Pagibig EE" Binding="{Binding Government.Pagibig_EE, StringFormat={}{0:N2}}" Width="75" IsReadOnly="True"/>
+                <DataGridTextColumn Header="SSS EE" Binding="{Binding Government.SSS_EE, StringFormat={}{0:N2}}" Width="75" IsReadOnly="True"/>
+                <DataGridTextColumn Header="PhilHealth" Binding="{Binding Government.PhilHealth, StringFormat={}{0:N2}}" Width="75" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Withholding Tax" Binding="{Binding Government.Withholding_Tax, StringFormat={}{0:N2}}" Width="100" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Pagibig ER" Binding="{Binding Government.Pagibig_ER, StringFormat={}{0:N2}}" Width="75" IsReadOnly="True"/>
+                <DataGridTextColumn Header="SSS ER" Binding="{Binding Government.SSS_ER, StringFormat={}{0:N2}}" Width="75" IsReadOnly="True"/>
+
+                <DataGridTextColumn Header="Payroll Code" Binding="{Binding Payroll_Code}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Bank Category" Binding="{Binding Bank_Category}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Bank Name" Binding="{Binding Bank_Name}" Width="75" IsReadOnly="True"/>
+            </DataGrid.Columns>
+        </DataGrid>
 
         <Grid Grid.Row="2" Grid.Column="1">
-            <Button x:Name="btnStartProcess" HorizontalAlignment="Right" Click="btnStartProcess_Click" Width="50">Start</Button>
+            <Button x:Name="btnStartProcess" Click="btnStartProcess_Click" Style="{StaticResource PrimaryButton}" HorizontalAlignment="Right" Width="50">Start</Button>
         </Grid>
 
         <ProgressBar x:Name="pb" Grid.Row="3" Grid.ColumnSpan="2"/>
