--- a/payroll-management-system/Page/Report/BankReport.xaml
+++ b/payroll-management-system/Page/Report/BankReport.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Report"
+﻿<Page x:Class="BankReport"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -41,7 +41,7 @@
 
                 <Grid x:Name="grdPayregisterDetail" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="3" >
                     <Grid.DataContext>
-                        <Binding Source="PayregisterDetail"/>
+                        <Binding Source="{ StaticResource PayregisterDetail}"/>
                     </Grid.DataContext>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="{adonisUi:Space 12}"/>
@@ -70,7 +70,7 @@
                     <TextBlock Grid.Row="7" Text="METRO-TAC" HorizontalAlignment="Right" Style="{StaticResource RegularTextBlock}"/>
                     <TextBlock Grid.Row="8" Text="METRO-PALO" HorizontalAlignment="Right" Style="{StaticResource RegularTextBlock}"/>
 
-                    <TextBox x:Name="tbPayrollCode" Grid.Row="0" Grid.Column="1"  Style="{StaticResource RegularTextBox}" Text="{Binding Path=PayrollCodesAll,Mode=TwoWay}"/>
+                    <TextBox x:Name="tbPayrollCode" Grid.Row="0" Grid.Column="1"  Style="{StaticResource RegularTextBox}" Text="{Binding Path=PayrollCodesAll}"/>
                     <TextBox x:Name="tbEECount" Grid.Row="1" Grid.Column="1" Style="{StaticResource RegularTextBox}" Text="{Binding Path=TotalEE}"/>
                     <TextBox x:Name="tbTotalAmount" Grid.Row="2" Grid.Column="1" Style="{StaticResource RegularTextBox}" Text="{Binding Path=TotalAmount, StringFormat={}{0:N0}}"/>
                     <TextBox x:Name="tbChinabank" Grid.Row="3" Grid.Column="1" Style="{StaticResource RegularTextBox}" Text="{Binding Path=TotalChinaBank}"/>
@@ -80,7 +80,7 @@
                     <TextBox x:Name="tbMetrobankTac" Grid.Row="7" Grid.Column="1" Style="{StaticResource RegularTextBox}"/>
                     <TextBox x:Name="tbMetrobankPalo" Grid.Row="8" Grid.Column="1" Style="{StaticResource RegularTextBox}"/>
 
-                    <Button x:Name="btnRun" Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="2"  HorizontalAlignment="Right" VerticalAlignment="Top" Style="{StaticResource PrimaryButton}" Margin="3,3,3,0">Generate Excel Report</Button>
+                    <Button x:Name="btnGenerateReport" Click="btnGenerateReport_Click" Grid.Row="9" Grid.Column="0" Grid.ColumnSpan="2"  HorizontalAlignment="Right" VerticalAlignment="Top" Style="{StaticResource PrimaryButton}" Margin="3,3,3,0">Generate Excel Report</Button>
                 </Grid>
             </Grid>
         </GroupBox>
@@ -88,14 +88,23 @@
         <DataGrid x:Name="lstPayrolls" Grid.Column="1" AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="EE Id" Binding="{Binding EE_Id}" Width="55" IsReadOnly="True"/>
-                <DataGridTextColumn Header="Payroll Date" Binding="{Binding Payroll_Date, StringFormat={}{0:yyyy-MM-dd}}" Width="85" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Fullname" Binding="{Binding EE.Fullname}" Width="175" IsReadOnly="True"/>
+                <!--<DataGridTextColumn Header="Payroll Date" Binding="{Binding Payroll_Date, StringFormat={}{0:yyyy-MM-dd}}" Width="85" IsReadOnly="True"/>-->
+                <DataGridTextColumn Header="Gross Pay" Binding="{Binding Gross_Pay, StringFormat={}{0:N2}}" Width="75" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Total Gov't Deduction" Binding="{Binding Government.TotalDeduction, StringFormat={}{0:N2}}" Width="100" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Adjust 1" Binding="{Binding Adjust1, StringFormat={}{0:N2}}" Width="55" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Adjust 2" Binding="{Binding Adjust2, StringFormat={}{0:N2}}" Width="55" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Net Pay" Binding="{Binding Net_Pay, StringFormat={}{0:N2}}" Width="75" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Pagibig EE" Binding="{Binding Government.Pagibig_EE, StringFormat={}{0:N2}}" Width="75" IsReadOnly="True"/>
+                <DataGridTextColumn Header="SSS EE" Binding="{Binding Government.SSS_EE, StringFormat={}{0:N2}}" Width="75" IsReadOnly="True"/>
+                <DataGridTextColumn Header="PhilHealth" Binding="{Binding Government.PhilHealth, StringFormat={}{0:N2}}" Width="75" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Withholding Tax" Binding="{Binding Government.Withholding_Tax, StringFormat={}{0:N2}}" Width="100" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Pagibig ER" Binding="{Binding Government.Pagibig_ER, StringFormat={}{0:N2}}" Width="75" IsReadOnly="True"/>
+                <DataGridTextColumn Header="SSS ER" Binding="{Binding Government.SSS_ER, StringFormat={}{0:N2}}" Width="75" IsReadOnly="True"/>
+                
                 <DataGridTextColumn Header="Payroll Code" Binding="{Binding Payroll_Code}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Bank Category" Binding="{Binding Bank_Category}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Bank Name" Binding="{Binding Bank_Name}" Width="75" IsReadOnly="True"/>
-                <DataGridTextColumn Header="Gross Pay" Binding="{Binding Gross_Pay, StringFormat={}{0:N0}}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="Net Pay" Binding="{Binding Net_Pay, StringFormat={}{0:N0}}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="Adjust 1" Binding="{Binding Adjust1, StringFormat={}{0:N0}}" Width="55" IsReadOnly="True"/>
-                <DataGridTextColumn Header="Adjust 2" Binding="{Binding Adjust2, StringFormat={}{0:N0}}" Width="55" IsReadOnly="True"/>
             </DataGrid.Columns>
         </DataGrid>
 
