--- a/payroll-management-system/Page/Payroll/AdjustmentRecord.xaml
+++ b/payroll-management-system/Page/Payroll/AdjustmentRecord.xaml
@@ -1,7 +1,7 @@
 ﻿<Page x:Class="AdjustmentRecord"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:payroll_management_app"
         xmlns:System="clr-namespace:System;assembly=mscorlib"
@@ -32,6 +32,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="{adonisUi:Space 6}"/>
             <RowDefinition/>
+            <RowDefinition Height="45"/>
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
             <StackPanel Orientation="Horizontal">
@@ -61,5 +62,10 @@
                 <DataGridComboBoxColumn Header="Request Type" ItemsSource="{Binding Source={StaticResource ReqChoice}}" SelectedItemBinding="{Binding Request_Type}"/>
             </DataGrid.Columns>
         </DataGrid>
+
+
+        <Grid Grid.Row="2" Grid.Column="1">
+            <Button x:Name="btnSave" Click="btnSave_Click" Style="{StaticResource PrimaryButton}" HorizontalAlignment="Right" Width="50">Start</Button>
+        </Grid>
     </Grid>
 </Page>
